--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,10 +1,9 @@
 ---
-title: "Page Not Found"
 layout: default
-excerpt: "Page not found. Your pixels are in another canvas."
+title: Página no encontrada
+excerpt: No pudimos encontrar la página que buscabas.
 sitemap: false
-permalink: /404.html
 ---
+![](/images/uploads/raf-360x360-075-t-fafafa_ca443f4786.jpg "Link muerto, entiendes? jaja :c")
 
-Sorry, but the page you were trying to view does not exist.
-
+Perdón, encontraste a un Link muerto :sweat_smile:.
