--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,6 +4,6 @@ title: Página no encontrada
 excerpt: No pudimos encontrar la página que buscabas.
 sitemap: false
 ---
-![](/images/uploads/raf-360x360-075-t-fafafa_ca443f4786.jpg "Link muerto, entiendes? jaja :c")
+![Link muerto.](/images/uploads/raf-360x360-075-t-fafafa_ca443f4786.jpg "Link muerto, entiendes? jaja :c")
 
 Perdón, encontraste a un Link muerto :sweat_smile:.
