--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,6 +3,7 @@ layout: default
 title: Página no encontrada
 excerpt: No pudimos encontrar la página que buscabas.
 sitemap: false
+permalink: /404.html
 ---
 ![Link muerto.](/images/uploads/raf-360x360-075-t-fafafa_ca443f4786.jpg "Link muerto, entiendes? jaja :c")
 
